# cicd_apprentice_class

./: Pipfile  README.md  bandit.conf  pyproject.toml
.github/workflows/: ci-template.yml  ci_template.yaml  publish-to-test-pypi.yml
cicd_class/: phonebook.py
tests/: __init__.py  test_unit_testing_example.py
