[project]
name = "cicd_apprentice_class"
version = "0.1.0"
description = "Create a pyproject.toml file for an existing project."
authors = [
    "Mia Frank <mia.frank@madeintandem.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.9.5"

[urls]
homepage = "https://github.com/miafrank/cicd_apprentice_class"
repository = "https://github.com/miafrank/cicd_apprentice_class"
documentation = "https://github.com/miafrank/cicd_apprentice_class"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
pytest = "*"
flake8 = "*"
bandit = "*"
safety = "*"
flask = "*"
autopep8 = "*"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.9.5" }

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''